[package]
name = "grovedb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_merkle = "1.1.0"
merk = { git = "https://github.com/dashevo/merk", branch = "v0.1-dev" }
thiserror = "1.0.30"
ed = "0.2.2"
tempdir = "0.3.7"
