[package]
name = "node-grove"
version = "0.3.1"
description = "GroveDB node.js bindings"
edition = "2021"
license = "MIT"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
node-grove-common = { path = "../node-grove-common" }

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]
